# service/userservice.go
@@ -87,6 +87,7 @@ func CreateUser(c *gin.Context) {
 	user.PassWord = c.Query("password")
 	user.Phone = c.Query("phone")
 	user.Email = c.Query("email")
+	user.Salt = utils.GenerateSalt()
 
 	//检验参数
 	if ok, err := govalidator.ValidateStruct(user); !ok {
@@ -96,6 +97,8 @@ func CreateUser(c *gin.Context) {
 		})
 		return
 	}
+
+	user.PassWord = utils.GeneratePassword(user.PassWord, user.Salt)
 
 	if err := models.CreateUser(utils.GetDB(), &user); err != nil {
 		c.JSON(500, gin.H{
@@ -198,6 +201,8 @@ func UpdateUser(c *gin.Context) {
 		return
 	}
 
+	user.PassWord = utils.GeneratePassword(user.PassWord, user.Salt)
+
 	if err := models.UpdateUser(utils.GetDB(), user); err != nil {
 		c.JSON(500, gin.H{
 			"message": "server error",
@@ -209,3 +214,49 @@ func UpdateUser(c *gin.Context) {
 		"message": "Update user success",
 	})
 }
+
+// Login
+// @Description user login
+// @Tags UserInfo
+// @param name query string true "用户名"
+// @param password query string true "密码"
+// @Success 200 {object} map[string]interface{} "Login success"
+// @Failure 500 {object} map[string]interface{} "错误信息"
+// @Router /user/login [post]
+func Login(c *gin.Context) {
+	user := models.UserBasic{}
+	user.Name = c.Query("name")
+	user.PassWord = c.Query("password")
+
+	//检验参数
+	if ok, err := govalidator.ValidateStruct(user); !ok {
+		c.JSON(400, gin.H{
+			"message": "invalid user info",
+			"error":   err.Error(),
+		})
+		return
+	}
+
+	//get user info
+	userInfo, ok := models.GetUserByName(utils.GetDB(), user.Name)
+	if ok != nil {
+		c.JSON(500, gin.H{
+			"message": "server error",
+			"error":   ok.Error(),
+		})
+		return
+	}
+
+	//check password
+	if userInfo.PassWord != utils.GeneratePassword(user.PassWord, userInfo.Salt) {
+		c.JSON(400, gin.H{
+			"message": "password error",
+		})
+		return
+	}
+
+	c.JSON(200, gin.H{
+		"message": "Login success",
+	})
+}
+
